<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout style="@style/MovieDetailLinearLayoutStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_title" />

        <TextView
            android:id="@+id/original_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_title"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout style="@style/MovieDetailLinearLayoutStyle"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/poster_thumbnail_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster_thumbnail" />

        <Button
            android:id="@+id/add_to_favorites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favorites"
            android:layout_marginLeft="25sp"
            />

    </LinearLayout>

    <LinearLayout style="@style/MovieDetailLinearLayoutStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plot_synopsis" />

        <TextView
            android:id="@+id/plot_synopsis_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout style="@style/MovieDetailLinearLayoutStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_rating" />

        <TextView
            android:id="@+id/user_rating_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout style="@style/MovieDetailLinearLayoutStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date" />

        <TextView
            android:id="@+id/release_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>

