<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wave39.popularmoviesstage1.MovieDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/original_title" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/original_title_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/poster_thumbnail" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/poster_thumbnail_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/plot_synopsis" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/plot_synopsis_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/user_rating" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/user_rating_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/release_date" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/release_date_textview" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
